exports_files([
    "build_and_test.yml.j2",
    "debug-and-cancel.action.yml",
    "devcontainer.yml.j2",
    "development_containers_build_test.yml",
    "development_containers_build_test_push.yml.j2",
    "manylinux.yml.j2",
    "mono_ci.yaml",
    "public_ci.yaml",
    "reboot_macos_environment.yml.j2",
    "setup-bazel-remote-cache.action.yml",
])
